Archive2/ce/34b649cfde2c0c/output
main.cpp:5:1: error: expected initializer before 'int'
 int main()
 ^
