Archive2/ce/34b649cfde2c0c/main.cpp
#include <iostream>
using namespace std;
int fatt(int x)

int main()
{
   cout << "Questo e' il nostro compilatore online!" << endl;
}
